Fixed toast positioning on mobile

--- a/sass/toast.scss
+++ b/sass/toast.scss
@@ -88,7 +88,7 @@ $snackbar_offset-bottom: 24px;
             box-shadow: 0 -1px 6px 1px rgba(0, 0, 0, 0.5);
 
             &.open {
-                transform: translateY(-60px);
+                transform: translateY(-150%);
             }
         }
     }
